# gmake

./: .gitignore  ADAPTIVE_CONTROL.py  C_H01_T0.py  LICENSE  README.md  S_H0125_T0.py  TC_H01_T4 copy.py  T_H0125_T4.py  setup.cfg
.docker_gmake/: docker-compose.yml
gcodes/: C01T0.gcode  SH0125T0.gcode  TCH01T4.gcode  TH0125T4.gcode
gmaker/: __init__.py  modules.py  utils.py
printers/: composer.json
