[metadata]
name = gmaker
version = attr: gmaker.__version__
author = Naruki Ichihara
author_email = csna20005@g.nihon-u.ac.jp
long_description = file:README.md
url = https://github.com/Naruki-Ichihara/g-maker
license = LICENSE
classifier =
    Development Status :: 1 - Pre-Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    
[options]
zip_safe = False
packages = find:
install_requires =
  tsp_solver2
  numpy
  scipy
  svgpathtools
  svgwrite